# dirtyInject

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake-multiple-platform.yml
include/: badDll.h  badDyLib.h  badSo.h  linInject.h  macInject.h  winInject.h
src/: dirtyInject.cpp
src/linux/: linInject.cpp
src/macOS/: macInject.cpp
src/utils/: badDll.cpp  badDyLib.mm  badSo.cpp
src/windows/: winInject.cpp
